syntax = "proto2";

package example.common.naming.proto.v1;

enum Title {
  TITLE_MR = 1;
  TITLE_MS = 2;
  TITLE_MRS = 3;
  TITLE_DR = 4;
}

message Name {
  required string first_name = 1;
  required string last_name = 2;
  optional Title title = 3;
}
